src/test/ui/chalkify/lower_env3.stderr
error: program clause dump
  --> $DIR/lower_env3.rs:5:5
   |
LL |     #[rustc_dump_env_program_clauses] //~ ERROR program clause dump
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: forall<'^0, ^1> { TypeOutlives(^1: '^0) :- FromEnv(&^1). }
   = note: forall<Self> { Implemented(Self: Foo) :- FromEnv(Self: Foo). }

error: program clause dump
  --> $DIR/lower_env3.rs:10:5
   |
LL |     #[rustc_dump_env_program_clauses] //~ ERROR program clause dump
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: forall<'^0, ^1> { TypeOutlives(^1: '^0) :- FromEnv(&^1). }
   = note: forall<Self> { FromEnv(Self: std::marker::Sized) :- FromEnv(Self: std::clone::Clone). }
   = note: forall<Self> { Implemented(Self: std::clone::Clone) :- FromEnv(Self: std::clone::Clone). }
   = note: forall<Self> { Implemented(Self: std::marker::Sized) :- FromEnv(Self: std::marker::Sized). }

error: aborting due to 2 previous errors

